Update heading and comment in index.html

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <body>
 <div class="scanline"></div>
  
-  <!-- Random floating quotes -->
+<!-- Random floating quotes -->
 <div class="quote" style="top: 40%; left: 5%; animation-delay: 0s;">Auddi Blö!</div>
 <div class="quote" style="top: 60%; left: 15%; animation-delay: 2s;">Hvað segir kjellinn!</div>
 <div class="quote" style="top: 40%; left: 80%; animation-delay: 4s;">Gilsari í gangi!</div>
@@ -143,8 +143,8 @@
 <div class="quote" style="top: 20%; left: 70%; animation-delay: 3s;">Auðunn Blöndal approves</div>
 <div class="quote" style="top: 85%; left: 30%; animation-delay: 5s;">Erum við ekki bara góðir?</div>
 <div class="quote" style="top: 90%; left: 35%; animation-delay: 0s;">Bald lives matter!</div>
-  <div class="container">
-<h1>TEKINN</h1>
+<div class="container">
+<h1>TEKINN!</h1>
 <img src="auddi-tekinn.jpg" alt="TEKINN" />
 </div>
 
