Update audio element for autoplay functionality
Removed the previous audio element and added a new one with autoplay.

--- a/index.html
+++ b/index.html
@@ -133,9 +133,7 @@
 </head>
  
 <body>
-  <audio controls>
-    <source src="nidurhal.mp3" type="audio/mpeg">
-  </audio>
+
   <div class="scanline"></div>
 
   <div class="quote" style="top: 40%; left: 5%; animation-delay: 0s;">Auddi Blö!</div>
@@ -151,6 +149,9 @@
     <button onclick="document.getElemendById('bgmusic').muted = false;"></button>
     -->
     <img src="auddi-tekinn.jpg" alt="TEKINN" />
+      <audio controls autoplay>
+    <source src="nidurhal.mp3" type="audio/mpeg">
+  </audio>
   </div>
 </body>
 </html>
