--- a/index.html
+++ b/index.html
@@ -144,18 +144,8 @@
   <div class="quote" style="top: 85%; left: 30%; animation-delay: 5s;">Erum við ekki bara góðir?</div>
   <div class="quote" style="top: 90%; left: 35%; animation-delay: 0s;">Bald lives matter!</div>
   <div class="container">
-    <h1>TEKINN!</h1><iframe width="560" height="315"
-    src="https://www.youtube.com/embed/83K-0HZ6uz8?list=PLht1ZsTHlElLgAytIuBa7Fp9qS8Mh4a9h"
-    title="YouTube playlist"
-    frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-    allowfullscreen>
-</iframe>
-
-     <!-- 
-    <button onclick="document.getElemendById('bgmusic').muted = false;"></button>
-    -->
-   <!-- <img src="auddi-tekinn.jpg" alt="TEKINN" />
+   <h1>TEKINN!</h1>
+     <a href="horfa.html"><img src="auddi-tekinn.jpg" alt="TEKINN" /></a>
   </br>
     <audio controls autoplay>
     <source src="nidurhal.mp3" type="audio/mpeg">
