Update title from 'TEKINN!' to 'HORFA Á TEKINN!'

--- a/horfa.html
+++ b/horfa.html
@@ -144,7 +144,7 @@
   <div class="quote" style="top: 85%; left: 30%; animation-delay: 5s;">Erum við ekki bara góðir?</div>
   <div class="quote" style="top: 90%; left: 35%; animation-delay: 0s;">Bald lives matter!</div>
   <div class="container">
-    <h1>TEKINN!</h1><iframe width="560" height="315"
+    <h1>HORFA Á TEKINN!</h1><iframe width="560" height="315"
     src="https://www.youtube.com/embed/83K-0HZ6uz8?list=PLht1ZsTHlElLgAytIuBa7Fp9qS8Mh4a9h"
     title="YouTube playlist"
     frameborder="0"
