Fix link text in horfa.html

--- a/horfa.html
+++ b/horfa.html
@@ -133,7 +133,7 @@
 </head>
  
 <body>
-<a href="index.html"> < -- til baka </a>
+<a href="index.html"> < til baka </a>
   <div class="scanline"></div>
 
   <div class="quote" style="top: 40%; left: 5%; animation-delay: 0s;">Auddi Blö!</div>
